--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <div class="file fade-in">
             <h2>Micro G Enhanced Android </h2>
             <p>This is the enhanced version of Micro G with build in VPN which routes traffic through other servers keeping the user's IP Address and Device safe.</p>
-            <a href="https://raw.githubusercontent.com/your-repo/main/downloads/file3.ext" class="download-btn">File 3</a>
+            <a href="github.com/goodwhitenixxa7/useful_apks/raw/refs/heads/main/downloads/microg_extended.apk
+" class="download-btn">File 3</a>
             <p>Paragraph 2</p>
         </div>
         
